# gst-plugins-bad

./: configure.ac
docs/plugins/: Makefile.am
ext/: Makefile.am
ext/depthsense/: Makefile.am  gstdepthsense.cpp  gstdepthsensesrc.cpp  gstdepthsensesrc.h
ext/opencv/: Makefile.am  gstdisparity.cpp  gstdisparity.h  gstopencv.c  gstopencv.cpp  gstopticalflow.cpp  gstopticalflow.h  gstpanography.cpp  gstpanography.h  gsttemplatematch.c  gsttemplatematch.h
ext/openni2/: Makefile.am  gstopenni2.c  gstopenni2src.cpp  gstopenni2src.h
